--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="flex h-screen flex-col items-center md:flex-row">
         <div class="hidden h-screen w-full bg-indigo-600 md:w-1/2 lg:block xl:w-2/3">
-            <img src="https://source.unsplash.com/random" alt="" class="h-full w-full object-cover" />
+            <img src="https://source.unsplash.com/random/?building" alt="" class="h-full w-full object-cover" />
         </div>
 
         <div
