--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                <div class="h-100 w-full">
                   <!-- Add a button to clean the history -->
                   <button id="cleanHistory"
-                     class="mt-6 block w-full rounded-lg bg-red-500 px-4 py-3 font-semibold text-white hover:bg-red-400 focus:bg-red-400">
-                  Clean History
+                     class="mt-6 block w-full rounded-lg px-4 py-3 font-semibold text-black border-indigo-500  hover:bg-indigo-100 focus:bg-indigo-100">
+                  Clear History
                   </button>
                </div>
                <hr class="my-6 w-full border-gray-300" />
