--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <title>Bimbala Desktop</title>
       <!-- Include the Tailwind CSS stylesheet -->
-      <link href="assets/style.css" rel="stylesheet">
+      <link href="assets/style.min.css" rel="stylesheet">
    </head>
    <body>
       <section class="flex h-screen flex-col items-center md:flex-row">
@@ -32,7 +32,7 @@
                <div class="h-100 w-full">
                   <!-- Add a button to clean the history -->
                   <button id="cleanHistory"
-                     class="mt-6 block w-full rounded-lg px-4 py-3 font-semibold text-black border-indigo-500  hover:bg-indigo-100 focus:bg-indigo-100">
+                     class="mt-6 block w-full rounded-lg px-4 py-3 font-semibold text-black border-1 border-indigo-500  hover:bg-indigo-100 focus:bg-indigo-100">
                   Clear History
                   </button>
                </div>
